Get rid of MaxPermSize flag
This flag is ignored by Java 8.

Change-Id: Ib0d5f7295ed48355c07558794f81d5681dc403d5